--- a/theBrexorcism/Base.lproj/Main.storyboard
+++ b/theBrexorcism/Base.lproj/Main.storyboard
@@ -100,7 +100,7 @@
             </objects>
             <point key="canvasLocation" x="500.5" y="357.5"/>
         </scene>
-        <!--Item-->
+        <!--Current Challenges-->
         <scene sceneID="vzG-Fz-Ehq">
             <objects>
                 <viewController id="OaM-XN-5w6" sceneMemberID="viewController">
@@ -112,34 +112,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="brexton4" translatesAutoresizingMaskIntoConstraints="NO" id="wIL-vS-fC4">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="502"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="roxanne1bw" translatesAutoresizingMaskIntoConstraints="NO" id="zu8-HQ-oYN">
+                                <rect key="frame" x="0.0" y="336" width="375" height="282"/>
                             </imageView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OHu-Er-byK">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rules" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZC-4B-2TJ">
-                                        <rect key="frame" x="166" y="21" width="43" height="21"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="76" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5Vy-fP-YLk">
+                                <rect key="frame" x="0.0" y="64" width="375" height="273"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dWr-Vw-hhR">
-                                <rect key="frame" x="0.0" y="63" width="375" height="439"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="76" id="nXB-CM-fVl">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nXB-CM-fVl" id="oKB-uQ-uR9">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="whq-ob-fII"/>
+                    <navigationItem key="navigationItem" title="Current Challenges" id="qUj-ZX-rnE"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UBl-iZ-GUQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="500.5" y="1173.5"/>
+            <point key="canvasLocation" x="946.5" y="1173.5"/>
         </scene>
         <!--ChallengeVC-->
         <scene sceneID="b96-G0-jhy">
@@ -197,7 +193,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yAe-jp-FgT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="946.5" y="1173.5"/>
+            <point key="canvasLocation" x="1437.5" y="1173.5"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="iW8-Wn-YXm">
@@ -212,7 +208,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="UOT-AU-x2i" kind="relationship" relationship="viewControllers" id="XR6-wK-m5K"/>
-                        <segue destination="OaM-XN-5w6" kind="relationship" relationship="viewControllers" id="cf6-mE-ShO"/>
+                        <segue destination="5mx-lG-n7x" kind="relationship" relationship="viewControllers" id="cf6-mE-ShO"/>
                         <segue destination="xTC-ch-nuX" kind="relationship" relationship="viewControllers" id="gtZ-N9-sc8"/>
                     </connections>
                 </tabBarController>
@@ -525,15 +521,34 @@
             </objects>
             <point key="canvasLocation" x="500.5" y="-377.5"/>
         </scene>
+        <!--Item-->
+        <scene sceneID="pbf-Un-fac">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5mx-lG-n7x" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="whq-ob-fII"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="fhf-B1-PLG">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="OaM-XN-5w6" kind="relationship" relationship="rootViewController" id="SZT-8F-aDn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ybh-vV-xEB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="500.5" y="1173.5"/>
+        </scene>
     </scenes>
     <resources>
         <image name="brexton-1" width="2048" height="1366"/>
         <image name="brexton1" width="2048" height="1366"/>
         <image name="brexton2bw" width="2048" height="1536"/>
-        <image name="brexton4" width="768" height="1024"/>
         <image name="brexton6bw" width="640" height="640"/>
         <image name="brexton7bw" width="2448" height="3264"/>
         <image name="brexton8bw" width="539" height="539"/>
         <image name="challenge1" width="640" height="468"/>
+        <image name="roxanne1bw" width="960" height="720"/>
     </resources>
 </document>
